# CxxInteropPlayground

./: .gitignore  CMakeLists.txt  README.md
src/: main.swift
src/cxx/: cxx.cpp  cxx.h  module.modulemap
src/swift/: test_vector_push_back.swift
src/swift/extensions/: vector_to_array.swift
